# sztuczna-inteligencja

./: .gitignore  pyproject.toml
lab1/: lab_1.ipynb
lab3/: lab_3.ipynb
lab4/: lab_4.ipynb
lab6/: lab_6.ipynb
