[project]
name = "basics-of-ai-agh"
version = "1.0.0"
description = "Basics of Artificial Intelligence course at AGH"
authors = []
readme = "README.md"
requires-python = ">=3.12,<4.0"

dependencies = [
    "imbalanced-learn>=0.14.0",
    "jupyter",
    "jupyterlab-execute-time",
    "jupytext",
    "kagglehub>=0.3.13",
    "lightgbm",
    "matplotlib",
    "numpy",
    "opencv-python>=4.11.0.86",
    "pandas",
    "scikit-learn>=1.7.2",
    "scikit-surprise>=1.1.4",
    "statsmodels>=0.14.5",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]

[tool.uv]
package = false
